2008-05-01  Gabriel Burt  <gabriel.burt@gmail.com>

	* build/m4/banshee/dap-mtp.m4:
	* configure.ac: Enable MTP support by default (if libmtp is available).

2008-05-01  Gabriel Burt  <gabriel.burt@gmail.com>

	* build/build.environment.mk:
	* configure.ac:
	* src/Extensions/Banshee.MiniMode/Banshee.MiniMode.addin.xml:
	* src/Extensions/Banshee.MiniMode/Banshee.MiniMode.mdp:
	* src/Extensions/Banshee.MiniMode/Banshee.MiniMode/MiniModeService.cs:
	* src/Extensions/Banshee.MiniMode/Banshee.MiniMode/MiniModeWindow.cs:
	* src/Extensions/Banshee.MiniMode/Banshee.MiniMode/SourceComboBox.cs:
	* src/Extensions/Banshee.MiniMode/Banshee.MiniMode/SourceModel.cs:
	* src/Extensions/Banshee.MiniMode/Makefile.am:
	* src/Extensions/Banshee.MiniMode/Resources/minimode.glade:
	* src/Extensions/Extensions.mds:
	* src/Extensions/Makefile.am: Patch from Bertrand Lorentz porting mini
	mode from stable, fixes BGO #527412.  The extension is built by default,
	but must be enabled in the Preferences dialog.

2008-04-30  Aaron Bockover  <abock@gnome.org>

	* build/m4/banshee/boo.m4: Require Boo 0.8.1

	* src/Extensions/Banshee.BooScript/Makefile.am: Do not try to build if
	we don't actually have the Boo requirement met

	* src/Extensions/Banshee.BooScript/Resources/duration-status-formats.boo:
	Fixed header

2008-04-30  Aaron Bockover  <abock@gnome.org>

	* build/build.environment.mk:
	* build/m4/banshee/boo.m4:
	* configure.ac: Build stuff for the BooScript extension

	* src/Core/Banshee.Core/Banshee.Base/Paths.cs: Added GetTempFileName

	* src/Core/Banshee.Services/Banshee.MediaEngine/TranscoderService.cs:
	Use the new Paths.GetTempFileName

	* src/Core/Banshee.Services/Banshee.Sources/DurationStatusFormatters.cs:
	Created a new collection that holds formatter handlers and add our 
	default formatters; this allows scripts and extensions can add their own

	* src/Core/Banshee.Services/Banshee.Sources/Source.cs: Move the default